<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/rg_floder_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rb_create_floder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createFloder" 
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_create_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createFile" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_file_name" />

</LinearLayout>