<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_path"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    
    <EditText
        android:id="@+id/text_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11" 
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:hint="@string/save_you_want_save" >
        <requestFocus />
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save_text" >
        </Button>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>

</LinearLayout>